--- a/lab_06/makefile_d
+++ b/lab_06/makefile_d
@@ -1,12 +1,13 @@
 CC := gcc
-OPTS = -g0
+OPTS = -g3
 CFLAGS := -std=c99 -Wall -Werror -pedantic
 
-main.exe : main.o work_array.o result_ex.o
-	$(CC) $^ -o $@ 
-	
+
+main.exe : result_ex.o unit_tests.o call_test.o
+	$(CC) $^ -o $@
+
 %.o : %.c *.h
 	$(CC) $(CFLAGS) $(OPTS) -c $<
-	
+    
 clean :
 	rm *.o *.exe
