--- a/lab_easy_01/makefile
+++ b/lab_easy_01/makefile
@@ -1,6 +1,6 @@
 CC := gcc
 OPTS = -g0
-CFLAGS := -std=c99 -Wall -Werror -pedantic
+CFLAGS := -std=c99 
 
 main.exe : main.o program_math.o program_resource.o
 	$(CC) $^ -o $@ 
@@ -8,5 +8,8 @@ main.exe : main.o program_math.o program_resource.o
 %.o : %.c *.h
 	$(CC) $(CFLAGS) $(OPTS) -c $<
 	
+uni_tests : program_math.o program_resource.o uni_tests.o
+	$(CC) $^ -o $@
+	./uni_tests.exe
 clean :
 	rm *.o *.exe
