--- a/lab_08_04/makefile
+++ b/lab_08_04/makefile
@@ -4,7 +4,7 @@ OPTS2 := -fprofile-arcs -ftest-coverage
 CFLAGS := -std=c99 -Wall -Werror -pedantic
 
 all : app.exe test.exe
-app.exe : main.o matrix.o
+app.exe : main.o matrix.o constant.o
 	$(CC) $(OPTS2) $^ -o $@
 test.exe : uni_tests.o matrix.o
 	$(CC) $(OPTS2) $^ -o $@
