lab07, all my uni-tests

--- a/lab_07_5_3/makefile
+++ b/lab_07_5_3/makefile
@@ -1,9 +1,12 @@
 CC := gcc
 OPTS := -std=c99
-#OPTS1 := -g0
 OPTS2 := -fprofile-arcs -ftest-coverage -g0
-FLAGS := -Wall -Werror -pedantic
+FLAGS := -Wall -pedantic
 
+all: app.exe test.exe
+
+test.exe: uni_tests.o MyMath.o WorkFile.o
+	$(CC) $(OPTS) $(OPTS2) $^ -o $@
 app.exe: main.o MyMath.o WorkFile.o
 	$(CC) $(OPTS) $(OPTS2) $^ -o $@
 %.o: %.c *.h
