--- a/lab_07_5_3/makefile
+++ b/lab_07_5_3/makefile
@@ -3,11 +3,13 @@ OPTS := -std=c99
 OPTS2 := -fprofile-arcs -ftest-coverage -g0
 FLAGS := -Wall -pedantic
 
-all: app.exe test.exe
+all: app.exe test.exe time.exe
 
 test.exe: uni_tests.o MyMath.o WorkFile.o
 	$(CC) $(OPTS) $(OPTS2) $^ -o $@
 app.exe: main.o MyMath.o WorkFile.o
+	$(CC) $(OPTS) $(OPTS2) $^ -o $@
+time.exe: time.o MyMath.o WorkFile.o
 	$(CC) $(OPTS) $(OPTS2) $^ -o $@
 %.o: %.c *.h
 	$(CC) $(OPTS) $(OPTS2) $(FLAGS) -c $<
